--- a/Models/FlowMatching/2025.06.20_RapFlow-TTS.md
+++ b/Models/FlowMatching/2025.06.20_RapFlow-TTS.md
@@ -369,7 +369,7 @@ As a result, ***RapFlow-TTS*** outperformed existing ODE-based models and effect
 [^Mehta2024Matcha-TTS]: [Matcha-TTS](../Diffusion/2023.09.06_Matcha-TTS.md)
 [^Yang2024ConsistencyFM]: [Consistency Flow Matching](_2024.07.02_Consistency_Flow_Matching.md)
 [^Song2023iCT]: [iCT](../Diffusion/2023.10.22_iCT.md)
-[^Kim2025SimpleReFlow]: [Simple ReFlow](2024.10.10_SimpleReFlow.md)
+[^Kim2025SimpleReFlow]: [Simple ReFlow](_2024.10.10_SimpleReFlow.md)
 [^Lee2024ReFlow++]: [ReFlow++](_2024.05.30_ReFlow++.md)
 [^Mao2017LSGAN]: [LSGAN](../_Basis/2016.11.13_LSGAN.md)
 [^Salimans2016ImprovedGAN]: [Improved Techniques for Training GANs](../_Basis/2016.06.10_ImprovedGAN.md)
