--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -26,11 +26,9 @@
 
 </details>
 
-## Abstract: 摘要
+## 摘要
 
-<table>
-<tr>
-<td width="50%">
+<!--
 
 This paper introduces ***F5-TTS***, a fully non-autoregressive text-to-speech system based on flow matching with Diffusion Transformer (DiT).
 Without requiring complex designs such as duration model, text encoder, and phoneme alignment, the text input is simply padded with filler tokens to the same length as input speech, and then the denoising is performed for speech generation, which was originally proved feasible by **E2 TTS**.
@@ -39,12 +37,10 @@ To address these issues, we first model the input with ConvNeXt to refine the te
 We further propose an inference-time Sway Sampling strategy, which significantly improves our model's performance and efficiency.
 This sampling strategy for flow step can be easily applied to existing flow matching based models without retraining.
 Our design allows faster training and achieves an inference RTF of 0.15, which is greatly improved compared to state-of-the-art diffusion-based TTS models.
-Trained on a public 100K hours multilingual dataset, our ***Fairytaler Fakes Fluent and Faithful speech with Flow matching (F5-TTS)*** exhibits highly natural and expressive zero-shot ability, seamless code-switching capability, and speed control efficiency.
-Demo samples can be found at [this https URL](https://swivid.github.io/F5-TTS).
-We release all code and checkpoints to promote community development ([Github](https://github.com/SWivid/F5-TTS)).
+Trained on a public 100K hours multilingual dataset, our ***F5-TTS*** exhibits highly natural and expressive zero-shot ability, seamless code-switching capability, and speed control efficiency.
+We have released all codes and checkpoints to promote community development, at [Github](https://SWivid.github.io/F5-TTS/).
 
-</td>
-<td>
+-->
 
 本文介绍了 ***F5-TTS***, 一个基于流匹配和 DiT 的完全非自回归文本到语音系统.
 无需复杂的设计, 如时长模型, 文本编码器和音素对齐, 文本输入只需要通过补充填充符号使得长度与输入语音相同, 然后进行去噪以生成语音, 这一方式最初由 **E2 TTS** 证明是可行的.
@@ -56,7 +52,7 @@ We release all code and checkpoints to promote community development ([Github](h
 
 我们的设计允许更快的训练, 并实现了推理 RTF 为 0.15, 这比现有的基于流匹配的 TTS 模型的最新水平提高了很多.
 
-在一个公开的 100K 小时多语言数据集上训练, 我们的 ***Fairytaler Fakes Fluent and Faithful speech with Flow matching (F5-TTS)*** 具有高度自然和富有表现力的零样本能力, 无缝切换能力, 以及速度控制的效率.
+在一个公开的 100K 小时多语言数据集上训练, 我们的 ***F5-TTS*** 具有高度自然和富有表现力的零样本能力, 无缝切换能力, 以及速度控制的效率.
 
 演示样本可以在[此处](https://swivid.github.io/F5-TTS)找到.
 我们发布所有代码和检查点, 以促进社区开发 ([Github](https://github.com/SWivid/F5-TTS)).
