--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -29,7 +29,6 @@
 ## 摘要
 
 <!--
-
 This paper introduces ***F5-TTS***, a fully non-autoregressive text-to-speech system based on flow matching with Diffusion Transformer (DiT).
 Without requiring complex designs such as duration model, text encoder, and phoneme alignment, the text input is simply padded with filler tokens to the same length as input speech, and then the denoising is performed for speech generation, which was originally proved feasible by **E2 TTS**.
 However, the original design of **E2 TTS** makes it hard to follow due to its slow convergence and low robustness.
@@ -39,7 +38,6 @@ This sampling strategy for flow step can be easily applied to existing flow matc
 Our design allows faster training and achieves an inference RTF of 0.15, which is greatly improved compared to state-of-the-art diffusion-based TTS models.
 Trained on a public 100K hours multilingual dataset, our ***F5-TTS*** exhibits highly natural and expressive zero-shot ability, seamless code-switching capability, and speed control efficiency.
 We have released all codes and checkpoints to promote community development, at [Github](https://SWivid.github.io/F5-TTS/).
-
 -->
 
 本文介绍了 ***F5-TTS***, 一个基于流匹配和 DiT 的完全非自回归文本到语音系统.
@@ -61,30 +59,13 @@ We have released all codes and checkpoints to promote community development, at 
 </tr>
 </table>
 
-## 1·Introduction: 引言
+## 1·引言
 
-<table>
-<tr>
-<td width="50%">
-
-Recent research in Text-to-Speech (TTS) has experienced great advancement ([Tacotron2](../Acoustic/2017.12.16_Tacotron2.md)[^01]; [Transformer-TTS](../Acoustic/2018.09.19_TransformerTTS.md)[^02]; [FastSpeech 2](../Acoustic/2020.06.08_FastSpeech2.md)[^03]; [Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md)[^04]; [VITS](../E2E/2021.06.11_VITS.md)[^05]; [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md)[^06]; [VioLA](../SpeechLM/ST2ST/2023.05.25_VioLA.md)[^07]; [NaturalSpeech](../E2E/2022.05.09_NaturalSpeech.md)[^08]).
-With a few seconds of audio prompt, current TTS models are able to synthesize speech for any given text and mimic the speaker of audio prompt ([VALL-E [9]](../SpeechLM/ST2S/2023.01.05_VALL-E.md); [VALL-E X [10]](../SpeechLM/ST2S/2023.03.07_VALL-E_X.md)).
-The synthesized speech can achieve high fidelity and naturalness that they are almost indistinguishable from human speech ([NaturalSpeech 2 [11]](2023.04.18_NaturalSpeech2.md); [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md); [VALL-E 2 [13]](../SpeechLM/ST2S/2024.06.08_VALL-E_2.md); [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md)).
-
-[^01]: [**Tacotron2**: Natural TTS Synthesis by Conditioning WaveNet on Mel Spectrogram Predictions.](../Acoustic/2017.12.16_Tacotron2.md) ICASSP 2017.
-[^02]: [**Transformer-TTS**: Neural Speech Synthesis with Transformer Network.](../Acoustic/2018.09.19_TransformerTTS.md) AAAI 2019.
-[^03]: [**FastSpeech2**: Fast and High-Quality End-to-End Text to Speech.](../Acoustic/2020.06.08_FastSpeech2.md) ArXiv 2020.
-[^04]: [**Glow-TTS**: A Generative Flow for Text-to-Speech via Monotonic Alignment Search.](../Acoustic/2020.05.22_Glow-TTS.md) NeurIPS 2020.
-[^05]:
-[^06]:
-[^07]:
-[^08]:
-[^09]:
-[^10]:
-[^11]:
-[^12]:
-[^13]:
-[^14]:
+<--
+Recent research in Text-to-Speech (TTS) has experienced great advancement~\citep{tacotron2,transtts,fastspeech2,glowtts,vits,gradtts,viola,ns1}.
+With a few seconds of audio prompt, current TTS models are able to synthesize speech for any given text and mimic the speaker of audio prompt~\citep{valle,vallex}.
+The synthesized speech can achieve high fidelity and naturalness that they are almost indistinguishable from human speech~\citep{ns2,ns3,valle2,voicebox}.
+-->
 
 </td>
 <td>
@@ -93,68 +74,44 @@ The synthesized speech can achieve high fidelity and naturalness that they are a
 通过几秒钟的音频提示, 当前的 TTS 模型能够为任何给定的文本合成语音, 并模仿参考音频中的说话人 ([VALL-E](../SpeechLM/ST2S/2023.01.05_VALL-E.md-E.md)[^09]; [VALL-E X [10]](../SpeechLM/ST2S/2023.03.07_VALL-E_X.md)).
 合成的语音可以达到几乎与人类语音无法区分的高保真度和自然度 ([NaturalSpeech 2 [11]](2023.04.18_NaturalSpeech2.md); [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md); [VALL-E 2 [13]](../SpeechLM/ST2S/2024.06.08_VALL-E_2.md); [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md)).
 
-</td>
-</tr>
-<tr>
-<td>
-
-While autoregressive (AR) based TTS models exhibit an intuitive way of consecutively predicting the next token(s) and have achieved promising zero-shot TTS capability, the inherent limitations of AR modeling require extra efforts addressing issues such as inference latency and exposure bias ([ELLA-V [15]](../SpeechLM/ST2S/2024.01.14_ELLA-V.md); [VALL-T [16]](../SpeechLM/ST2S/2024.01.25_VALL-T.md); [VALL-E R [17]](../SpeechLM/ST2S/2024.06.12_VALL-E_R.md); [RALL-E [18]](../SpeechLM/ST2S/2024.04.04_RALL-E.md); [VoiceCraft [19]](../SpeechLM/2024.03.25_VoiceCraft.md)).
-Moreover, the quality of speech tokenizer is essential for AR models to achieve high-fidelity synthesis ([SoundStream [20]](../Tokenizer/2021.07.07_SoundStream.md); [EnCodec [21]](../Tokenizer/2022.10.24_EnCodec.md); [AudioDec [22]](../Tokenizer/2023.05.26_AudioDec.md); [HiFi-Codec [23]](../Tokenizer/2023.05.04_HiFi-Codec.md); [SpeechTokenizer [24]](../SpeechCodec/2023.08.31_SpeechTokenizer.md); [dMel [25]](../SpeechCodec/2024.07.22_dMel.md); [NDVQ [26]](../SpeechCodec/2024.09.19_NDVQ.md)).
-Thus, there have been studies exploring direct modeling in continuous space ([ARDiT [27]](2024.06.08_ARDiT.md); [MAR [28]](../CV/2024.06.17_MAR.md); [MELLE [29]](../SpeechLM/ST2S/2024.07.11_MELLE.md)) to enhance synthesized speech quality recently.
-
-</td>
-<td>
+<--
+While autoregressive (AR) based TTS models exhibit an intuitive way of consecutively predicting the next token(s) and have achieved promising zero-shot TTS capability, the inherent limitations of AR modeling require extra efforts addressing issues such as inference latency and exposure bias~\citep{ellav,vallt,valler,ralle,voicecraft}.
+Moreover, the quality of speech tokenizer is essential for AR models to achieve high-fidelity synthesis~\citep{soundstream,encodec,audiodec,hificodec,speechtokenizer,dmel,ndvq}.
+Thus, there have been studies exploring direct modeling in continuous space~\citep{ardittts,ar-wovq,melle} to enhance synthesized speech quality recently.
+-->
 
 尽管基于自回归 (AR) 的 TTS 模型展示了直观的方式, 即连续预测下一个 Token, 并实现了有前景的零样本 TTS 能力, 但自回归建模的固有限制需要额外努力来解决推理延迟和暴露偏差等问题 ([ELLA-V [15]](../SpeechLM/ST2S/2024.01.14_ELLA-V.md); [VALL-T [16]](../SpeechLM/ST2S/2024.01.25_VALL-T.md); [VALL-E R [17]](../SpeechLM/ST2S/2024.06.12_VALL-E_R.md); [RALL-E [18]](../SpeechLM/ST2S/2024.04.04_RALL-E.md); [VoiceCraft [19]](../SpeechLM/2024.03.25_VoiceCraft.md)).
 此外, 语音分词器的质量对于自回归模型实现高保真合成至关重要 ([SoundStream [20]](../Tokenizer/2021.07.07_SoundStream.md); [EnCodec [21]](../Tokenizer/2022.10.24_EnCodec.md); [AudioDec [22]](../Tokenizer/2023.05.26_AudioDec.md); [HiFi-Codec [23]](../Tokenizer/2023.05.04_HiFi-Codec.md); [SpeechTokenizer [24]](../SpeechCodec/2023.08.31_SpeechTokenizer.md); [dMel [25]](../SpeechCodec/2024.07.22_dMel.md); [NDVQ [26]](../SpeechCodec/2024.09.19_NDVQ.md)).
 因此, 最近的研究探索了在连续空间中直接建模 ([ARDiT [27]](2024.06.08_ARDiT.md); [MAR [28]](../CV/2024.06.17_MAR.md); [MELLE [29]](../SpeechLM/ST2S/2024.07.11_MELLE.md)), 以提高合成语音的质量.
 
-</td>
-</tr>
-<tr>
-<td>
-
+<--
 Although AR models demonstrate impressive zero-shot performance as they perform implicit duration modeling and can leverage diverse sampling strategies, non-autoregressive (NAR) models benefit from fast inference through parallel processing, and effectively balance synthesis quality and latency.
-Notably, diffusion models ([DDPM [30]](_2020.06.19_DDPM.md); [Song et al.(2020) [31]](_2020.11.26_Score-Based_Generative_Modeling_through_SDE.md)) contribute most to the success of current NAR speech models ([NaturalSpeech 2 [11]](2023.04.18_NaturalSpeech2.md); [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md)).
-In particular, [Flow Matching with Optimal Transport path (FM-OT) [32]](../FlowMatching/_2022.10.06_Flow_Matching.md) is widely used in recent research fields not only text-to-speech ([Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md); [VoiceFlow [33]](../FlowMatching/2023.09.10_VoiceFlow.md); [Matcha-TTS [34]](2023.09.06_Matcha-TTS.md); [DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md); [**E2 TTS** [36]](2024.06.26_E2_TTS.md)) but also image generation ([StableDiffusion3 [37]](2024.03.05_StableDiffusion3.md)) and music generation ([FluxMusic [38]](2024.09.01_FluxMusic.md)).
-
-</td>
-<td>
+Notably, diffusion models~\citep{ddpm,score} contribute most to the success of current NAR speech models~\citep{ns2,ns3}.
+In particular, Flow Matching with Optimal Transport path (FM-OT)~\citep{cfm-ot} is widely used in recent research fields not only text-to-speech~\citep{voicebox,voiceflow,matchatts,dittotts,e2tts} but also image generation~\citep{sd3} and music generation~\citep{fluxmusic}.
+-->
 
 尽管自回归模型展示了令人印象深刻的零样本性能, 因为它们执行隐式的时长建模并可以利用多种采样策略, 但非自回归 (NAR) 模型通过并行处理受益于快速推理, 并有效平衡了合成质量和延迟.
 值得注意的是, 扩散模型 ([DDPM [30]](_2020.06.19_DDPM.md); [Song et al.(2020) [31]](_2020.11.26_Score-Based_Generative_Modeling_through_SDE.md)) 对当前非自回归语音模型的成功贡献最大 ([NaturalSpeech 2 [11]](2023.04.18_NaturalSpeech2.md); [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md)).
 特别是, [最优传输的流匹配技术 (FM-OT) [32]](../FlowMatching/_2022.10.06_Flow_Matching.md) 在最近的文本转语音 ([Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md); [VoiceFlow [33]](../FlowMatching/2023.09.10_VoiceFlow.md); [Matcha-TTS [34]](2023.09.06_Matcha-TTS.md); [DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md); [**E2 TTS** [36]](2024.06.26_E2_TTS.md)) 以及图像生成 ([StableDiffusion3 [37]](2024.03.05_StableDiffusion3.md)) 和音乐生成 ([FluxMusic [38]](2024.09.01_FluxMusic.md)) 等研究领域中得到了广泛应用.
 
-</td>
-</tr>
-<tr>
-<td>
-
+<--
 Unlike AR-based models, the alignment modeling between input text and synthesized speech is crucial and challenging for NAR-based models.
-While [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md) and [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md) use frame-wise phoneme alignment; [Matcha-TTS [34]](2023.09.06_Matcha-TTS.md) adopts monotonic alignment search and relies on phoneme-level duration model; recent works find that introducing such rigid and inflexible alignment between text and speech hinders the model from generating results with higher naturalness ([**E2 TTS**](../Diffusion/2024.06.26_E2_TTS.md)[^36]; [Seed-TTS [39]](../SpeechLM/2024.06.04_Seed-TTS.md)).
-
-</td>
-<td>
+While NaturalSpeech 3 \citep{ns3} and Voicebox \citep{voicebox} use frame-wise phoneme alignment; Matcha-TTS \citep{matchatts} adopts monotonic alignment search \citep{glowtts} and relies on a phoneme-level duration model; recent works find that introducing such rigid alignment between text and speech hinders the model from generating results with higher naturalness~\citep{e2tts,seedtts}.
+-->
 
 与基于自回归的模型不同, 输入文本与合成语音之间的对齐建模对于基于非自回归的模型至关重要且具有挑战性.
 尽管 [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md) 和[Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md) 使用帧级音素对齐; [Matcha-TTS [34]](2023.09.06_Matcha-TTS.md) 采用单调对齐搜索并依赖于音素级时长模型; 最近的研究发现, 在文本和语音之间引入这种刚性和不灵活的对齐会阻碍模型生成更高自然度的结果 ([**E2 TTS** [36]](2024.06.26_E2_TTS.md); [Seed-TTS [39]](../SpeechLM/2024.06.04_Seed-TTS.md)).
 
-</td>
-</tr>
-<tr>
-<td>
-
-[E3 TTS [40]](2023.11.02_E3_TTS.md) abandons phoneme-level duration and applies cross-attention on the input sequence but yields limited audio quality.
-[DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md) uses [Diffusion Transformer (DiT) [41]](_2022.12.19_DiT.md) with cross-attention conditioned on encoded text from a pretrained language model.
+<--
+E3 TTS~\citep{e3tts} abandons phoneme-level duration and applies cross-attention on the input sequence but yields limited audio quality.
+DiTTo-TTS~\citep{dittotts} uses Diffusion Transformer (DiT)~\citep{dit} with cross-attention conditioned on encoded text from a pretrained language model.
 To further enhance alignment, it uses the pretrained language model to finetune the neural audio codec, infusing semantic information into the generated representations.
-In contrast, [**E2 TTS**](../Diffusion/2024.06.26_E2_TTS.md)[^36], based on [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md), adopts a simpler way, which removes the phoneme and duration predictor and directly uses characters padded with filler tokens to the length of mel spectrograms as input.
+In contrast, E2 TTS~\citep{e2tts}, based on Voicebox~\citep{voicebox}, adopts a simpler way, which removes the phoneme and duration predictor and directly uses characters padded with filler tokens to the length of mel spectrograms as input.
 This simple scheme also achieves very natural and realistic synthesized results.
-However, we found that robustness issues exist in **E2 TTS** for the text and speech alignment.
-[Seed-TTS [39]](../SpeechLM/2024.06.04_Seed-TTS.md) employs a similar strategy and achieves excellent results, though not elaborated in model details.
+However, we found that robustness issues exist in E2 TTS for the text and speech alignment.
+Seed-TTS~\citep{seedtts} employs a similar strategy and achieves excellent results, though not elaborated in model details.
 In these ways of not explicitly modeling phoneme-level duration, models learn to assign the length of each word or phoneme according to the given total sequence length, resulting in improved prosody and rhythm.
-
-</td>
-<td>
+-->
 
 - [E3 TTS [40]](2023.11.02_E3_TTS.md) 放弃了音素级时长, 并在输入序列上应用交叉注意力, 但音频质量有限.
 - [DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md) 使用 [Diffusion Transformer (DiT) [41]](_2022.12.19_DiT.md), 并在预训练语言模型的编码文本上进行交叉注意力条件化.
@@ -171,13 +128,12 @@ In these ways of not explicitly modeling phoneme-level duration, models learn to
 <tr>
 <td>
 
-In this paper, we propose ***F5-TTS, a Fairytaler that Fakes Fluent and Faithful speech with Flow matching***.
-Maintaining the simplicity of pipeline without phoneme alignment, duration predictor, text encoder, and semantically infused codec model, ***F5-TTS*** leverages the Diffusion Transformer with [ConvNeXt V2 [42]](../_Basis/2023.01.02_ConvNeXt_V2.md) to better tackle text-speech alignment during in-context learning.
-We stress the deep entanglement of semantic and acoustic features in the **E2 TTS** model design, which has inherent problems and will pose alignment failure issues that could not simply be solved with re-ranking.
+In this paper, we propose ***F5-TTS***, a ***Fairytaler that Fakes Fluent and Faithful speech with Flow matching***.
+Maintaining the simplicity of pipeline without phoneme alignment, duration predictor, text encoder, and semantically infused codec model, F5-TTS leverages the Diffusion Transformer with ConvNeXt V2~\citep{convnextv2} to better tackle text-speech alignment during in-context learning.
+We stress the deep entanglement of semantic and acoustic features in the E2 TTS model design, which has inherent problems and will pose alignment failure issues that could not simply be solved with re-ranking.
 With in-depth ablation studies, our proposed ***F5-TTS*** demonstrates stronger robustness, in generating more faithful speech to the text prompt, while maintaining comparable speaker similarity.
 Additionally, we introduce an inference-time sampling strategy for flow steps substantially improving naturalness, intelligibility, and speaker similarity of generation.
 This approach can be seamlessly integrated into existing flow matching based models without retraining.
-
 </td>
 <td>
 
@@ -192,7 +148,7 @@ This approach can be seamlessly integrated into existing flow matching based mod
 </tr>
 </table>
 
-## 2·Preliminaries: 预备知识
+## 2·背景
 
 ### 2.1·Flow Matching: 流匹配
 
