--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -123,19 +123,14 @@ In these ways of not explicitly modeling phoneme-level duration, models learn to
 
 在这些不显式建模音素级时长的方式中, 模型根据给定的总序列长度学习分配每个单词或音素的长度, 从而改善了韵律和节奏.
 
-</td>
-</tr>
-<tr>
-<td>
-
+<--
 In this paper, we propose ***F5-TTS***, a ***Fairytaler that Fakes Fluent and Faithful speech with Flow matching***.
 Maintaining the simplicity of pipeline without phoneme alignment, duration predictor, text encoder, and semantically infused codec model, F5-TTS leverages the Diffusion Transformer with ConvNeXt V2~\citep{convnextv2} to better tackle text-speech alignment during in-context learning.
 We stress the deep entanglement of semantic and acoustic features in the E2 TTS model design, which has inherent problems and will pose alignment failure issues that could not simply be solved with re-ranking.
 With in-depth ablation studies, our proposed ***F5-TTS*** demonstrates stronger robustness, in generating more faithful speech to the text prompt, while maintaining comparable speaker similarity.
 Additionally, we introduce an inference-time sampling strategy for flow steps substantially improving naturalness, intelligibility, and speaker similarity of generation.
 This approach can be seamlessly integrated into existing flow matching based models without retraining.
-</td>
-<td>
+-->
 
 在本文中, 我们提出了 ***F5-TTS, 一个通过流匹配生成流畅和忠实语音的童话故事讲述者***.
 在保持流水线简单性的同时, ***F5-TTS*** 利用 Diffusion Transformer 与 [ConvNeXt V2 [42]](../_Basis/2023.01.02_ConvNeXt_V2.md) 更好地处理上下文学习中的文本-语音对齐.
@@ -144,57 +139,22 @@ This approach can be seamlessly integrated into existing flow matching based mod
 此外, 我们引入了一种推理时采样策略, 显著提高了生成语音的自然度、可理解性和说话者相似性.
 这种方法可以无缝集成到现有的基于流匹配的模型中, 而无需重新训练.
 
-</td>
-</tr>
-</table>
-
 ## 2·背景
 
 ### 2.1·Flow Matching: 流匹配
 
-<a id="sec:fm"></a>
-
-<table>
-<tr>
-<td width="50%">
-
+<--
 The Flow Matching (FM) objective is to match a probability path $p_t$ from a simple distribution $\displaystyle p_0$, e.g., the standard normal distribution $p(x) = \mathcal{N}(x|0,I)$, to $\displaystyle p_1$ approximating the data distribution $q$.
 In short, the FM loss regresses the vector field $u_t$ with a neural network $v_t$ as
 
 $$
-\mathcal{L}_{FM}(\theta) = E_{t, p_t(x)} \left\| v_t(x) - u_t(x) \right\| ^2,
+\mathcal{L}_{FM}(\theta) = E_{t, p_t(x)} \left\| v_t(x) - u_t(x) \right\|^2,
+\tag{01}
 $$
 
 where $\theta$ parameterizes the neural network, $t\sim\mathcal{U}[0,1]$ and $x\sim p_t(x)$.
-The model $v_t$ is trained over the entire flow step and data range, ensuring it learns to handle the entire transformation process from the initial distribution to the target distribution.
-
-As we have no prior knowledge of how to approximate $p_t$ and $u_t$, a conditional probability path $p_t(x|x_1) = \mathcal{N}(x\ |\ \mu_t(x_1),\sigma_t(x_1)^2I)$ is considered in actual training, and the Conditional Flow Matching (CFM) loss is proved to have identical gradients w.r.t. $\theta$ ([Flow Matching [32]](../FlowMatching/_2022.10.06_Flow_Matching.md)).
-$x_1$ is the random variable corresponding to training data.
-$\mu$ and $\sigma$ is the time-dependent mean and scalar standard deviation of Gaussian distribution.
-
-Remember that the goal is to construct target distribution (data samples) from initial simple distribution, e.g., Gaussian noise.
-With the conditional form, the flow map $\psi_t(x)=\sigma_t(x_1)x+\mu_t(x_1)$ with $\mu_0(x_1)=0$ and $\sigma_0(x_1)=1$, $\mu_1(x_1)=x_1$ and $\sigma_1(x_1)=0$ is made to have all conditional probability paths converging to $p_0$ and $p_1$ at the start and end.
-The flow thus provides a vector field $d\psi_t(x_0)/dt = u_t(\psi_t(x_0)|x_1)$.
-Reparameterize $p_t(x|x_1)$ with $x_0$, we have
-
-$$
-\mathcal{L}_{\text{CFM}}(\theta) = E_{t, q(x_{1}), p(x_0)} \| v_{t}(\psi_t(x_0)) - \frac{d}{dt}\psi_t(x_0) \| ^2.
-$$
-
-Further leveraging Optimal Transport form $\psi_t(x)=(1-t)x+tx_1$, we have the OT-CFM loss,
-
-$$
-\mathcal{L}_{\text{CFM}}(\theta) = E_{t, q(x_{1}), p(x_0)} \| v_{t}((1-t)x_0+tx_1) - (x_1-x_0) \| ^2.
-$$
-
-To view in a more general way ([VDM++ [43]](2023.09.25_VDM++.md)), if formulating the loss in terms of log signal-to-noise ratio (log-SNR) $\lambda$ instead of flow step $t$, and parameterizing to predict $x_0$ ($\epsilon$, commonly stated in diffusion model) instead of predict $x_1-x_0$, the CFM loss is equivalent to the $v$-prediction ([Salimans et al. (2022) [44]](_2022.02.01_Progressive_Distillation.md)) loss with cosine schedule.
-
-For inference, given sampled noise $x_0$ from initial distribution $p_0$, flow step $t\in[0,1]$ and condition with respect to generation task, the ordinary differential equation (ODE) solver ([TorchDiffEq [45]](../../OpenSource/Original/TorchDiffEq/Main.md)) is used to evaluate $\psi_1(x_0)$ the integration of $d\psi_t(x_0)/dt$ with $\psi_0(x_0)=x_0$.
-The number of function evaluations (NFE) is the times going through the neural network as we may provide multiple flow step values from 0 to 1 as input to approximate the integration.
-Higher NFE will produce more accurate results and certainly take more calculation time.
-
-</td>
-<td>
+$v_t$ is trained over the entire flow step and data range, ensuring it learns to handle the entire transformation process from the initial distribution to the target distribution.
+-->
 
 流匹配的目标是匹配一个概率路径 $p_t$ 从一个简单的分布 $p_0$, 例如标准正态分布 $p(x) = \mathcal{N}(x|0,I)$, 到 $p_1$ 近似数据分布 $q$.
 简而言之, 流匹配损失通过神经网络 $v_t$ 回归向量场 $u_t$, 即
@@ -206,9 +166,35 @@ $$
 其中 $\theta$ 参数化神经网络, $t \sim \mathcal{U}[0,1]$ 和 $x \sim p_t(x)$.
 模型 $v_t$ 在整个流步骤和数据范围内进行训练, 确保它学习从初始分布到目标分布的整个变换过程.
 
+<--
+As we have no prior knowledge of how to approximate $p_t$ and $u_t$, a conditional probability path $p_t(x|x_1) = \mathcal{N}(x\ |\ \mu_t(x_1),\sigma_t(x_1)^2I)$ is considered in actual training, and the Conditional Flow Matching (CFM) loss is proved to have identical gradients w.r.t. $\theta$~\citep{cfm-ot}.
+$x_1$ is the random variable corresponding to training data.
+$\mu$ and $\sigma$ is the time-dependent mean and scalar standard deviation of Gaussian distribution.
+-->
+
 由于我们没有关于如何近似 $p_t$ 和 $u_t$ 的先验知识, 实际训练中考虑了条件概率路径 $p_t(x|x_1) = \mathcal{N}(x\ |\ \mu_t(x_1),\sigma_t(x_1)^2I)$, 并且证明了条件Flow Matching (CFM) 损失在 $\theta$ 上具有相同的梯度 ([Flow Matching [32]](../FlowMatching/_2022.10.06_Flow_Matching.md)).
 $x_1$ 是与训练数据对应的随机变量.
 $\mu$ 和 $\sigma$ 是高斯分布的时间依赖均值和标量标准差.
+
+<--
+Remember that the goal is to construct target distribution (data samples) from initial simple distribution, e.g., Gaussian noise.
+With the conditional form, the flow map $\psi_t(x)=\sigma_t(x_1)x+\mu_t(x_1)$ with $\mu_0(x_1)=0$ and $\sigma_0(x_1)=1$, $\mu_1(x_1)=x_1$ and $\sigma_1(x_1)=0$ is made to have all conditional probability paths converging to $p_0$ and $p_1$ at the start and end.
+The flow thus provides a vector field $d\psi_t(x_0)/dt = u_t(\psi_t(x_0)|x_1)$.
+Reparameterize $p_t(x|x_1)$ with $x_0$, we have
+$$
+\mathcal{L}_{\text{CFM}}(\theta) = E_{t, q(x_{1}), p(x_0)} \| v_{t}(\psi_t(x_0)) - \frac{d}{dt}\psi_t(x_0) \|^2.
+\tag{02}
+$$
+
+Further leveraging Optimal Transport form $\psi_t(x)=(1-t)x+tx_1$, we have the OT-CFM loss,
+
+$$
+\mathcal{L}_{\text{CFM}}(\theta) = E_{t, q(x_{1}), p(x_0)} \| v_{t}((1-t)x_0+tx_1) - (x_1-x_0) \|^2.
+\tag{03}
+$$
+
+To view in a more general way~\citep{snrtheory}, if formulating the loss in terms of log signal-to-noise ratio (log-SNR) $\lambda$ instead of flow step $t$, and parameterizing to predict $x_0$ ($\epsilon$, commonly stated in diffusion model) instead of predict $x_1-x_0$, the CFM loss is equivalent to the v-prediction~\citep{vpredict} loss with cosine schedule.
+-->
 
 记住, 目标是构建从初始简单分布 (例如高斯噪声) 到目标分布 (数据样本).
 通过条件形式, 流映射 $\psi_t(x)=\sigma_t(x_1)x+\mu_t(x_1)$ 使得所有条件概率路径在开始和结束时分别收敛到 $p_0$ 和 $p_1$, 其中 $\mu_0(x_1)=0$ 和 $\sigma_0(x_1)=1$, $\mu_1(x_1)=x_1$ 和 $\sigma_1(x_1)=0$.
@@ -227,30 +213,36 @@ $$
 
 以更一般的方式来看 ([VDM++ [43]](2023.09.25_VDM++.md)) , 如果以对数信噪比 (log-SNR) $\lambda$ 而不是流步骤 $t$ 来表示损失, 并且参数化以预测 $x_0$ ($\epsilon$, 通常在扩散模型中提到) 而不是预测 $x_1-x_0$, CFM损失等价于 $v$-预测 ([Salimans et al. (2022) [44]](_2022.02.01_Progressive_Distillation.md)) 损失, 采用余弦调度.
 
+<--
+For inference, given sampled noise $x_0$ from initial distribution $p_0$, flow step $t\in[0,1]$ and condition with respect to generation task, the ordinary differential equation (ODE) solver~\citep{torchdiffeq} is used to evaluate $\psi_1(x_0)$ the integration of $d\psi_t(x_0)/dt$ with $\psi_0(x_0)=x_0$.
+The number of function evaluations (NFE) is the times going through the neural network as we may provide multiple flow step values from 0 to 1 as input to approximate the integration.
+Higher NFE will produce more accurate results and certainly take more calculation time.
+-->
+
 对于推理, 给定从初始分布 $p_0$ 采样的噪声 $x_0$, 流步骤 $t \in [0,1]$ 和生成任务的条件, 使用常微分方程 (ODE) 求解器 ([TorchDiffEq [45]](../../OpenSource/Original/TorchDiffEq/Main.md)) 来评估 $\psi_1(x_0)$, 即 $d\psi_t(x_0)/dt$ 的积分, 其中 $\psi_0(x_0)=x_0$.
 函数评估次数 (NFE) 是遍历神经网络的次数, 因为我们可能提供从0到1的多个流步骤值作为输入来近似积分.
 更高的NFE将产生更准确的结果, 当然也会花费更多的计算时间.
 
-</td>
-</tr>
-</table>
-
 ### 2.2·Classifier-Free Guidance: 无分类器引导
 
-<table>
-<tr>
-<td width="50%">
-
-Classifier Guidance (CG) is proposed by [ADM [46]](2021.05.11_ADM.md), functions by adding the gradient of an additional classifier, while such an explicit way to condition the generation process may have several problems.
+<--
+Classifier Guidance (CG) is proposed by \citet{cg}, functions by adding the gradient of an additional classifier, while such an explicit way to condition the generation process may have several problems.
 Extra training of the classifier is required and the generation result is directly affected by the quality of the classifier.
 Adversarial attacks might also occur as the guidance is introduced through the way of updating the gradient.
 Thus deceptive images with imperceptible details to human eyes may be generated, which are not conditional.
+-->
 
-[Classifier-Free Guidance (CFG) [47]](_2022.07.26_Classifier-Free_Guidance.md) proposes to replace the explicit classifier with an implicit classifier without directly computing the explicit classifier and its gradient.
+由 [ADM [46]](2021.05.11_ADM.md) 提出的**分类器引导 (Classifier Guidance, CG)**, 通过添加额外的分类器的梯度来实现其功能, 然而这种显式的为生成过程进行条件化的方式可能存在一些问题.
+- 分类器需要额外训练, 生成的结果直接由分类器的质量直接影响.
+- 由于引导是通过更新梯度的方式引入的, 对抗攻击也可能发生.
+
+因此可能会生成对人眼来说细节难以察觉的欺骗性图像, 这些图像并非条件化的.
+
+<--
+Classifier-Free Guidance (CFG)~\citep{cfg} proposes to replace the explicit classifier with an implicit classifier without directly computing the explicit classifier and its gradient.
 The gradient of a classifier can be expressed as a combination of conditional generation probability and unconditional generation probability.
 By dropping the condition with a certain rate during training, and linear extrapolating the inference outputs with and without condition $c$, the final guided result is obtained.
 We could balance between fidelity and diversity of the generated samples with
-
 $$
 v_{t,CFG} = v_{t}(\psi_t(x_0),c) + \alpha (v_{t}(\psi_t(x_0),c)-v_{t}(\psi_t(x_0)))
 $$
@@ -258,15 +250,7 @@ $$
 in CFM case, where $\alpha$ is the CFG strength.
 (Note that the inference time will be doubled if CFG.)
 (Model $v_t$ will execute the forward process twice, once with condition, and once without.)
-
-</td>
-<td>
-
-由 [ADM [46]](2021.05.11_ADM.md) 提出的**分类器引导 (Classifier Guidance, CG)**, 通过添加额外的分类器的梯度来实现其功能, 然而这种显式的为生成过程进行条件化的方式可能存在一些问题.
-- 分类器需要额外训练, 生成的结果直接由分类器的质量直接影响.
-- 由于引导是通过更新梯度的方式引入的, 对抗攻击也可能发生.
-
-因此可能会生成对人眼来说细节难以察觉的欺骗性图像, 这些图像并非条件化的.
+-->
 
 **[无分类器引导 (Classifier-Free Guidance, CFG) [47]](_2022.07.26_Classifier-Free_Guidance.md)** 提出使用隐式分类器来替代显式分类器, 而无需直接计算显式分类器及其梯度.
 分类器的梯度可以表示为条件生成概率和无条件生成概率的组合.
@@ -281,10 +265,6 @@ $$
 在 CFM 情况下, $\alpha$ 是 CFG 强度.
 (注意, 如果使用 CFG, 推理时间将会加倍.)
 (模型 $v_t$ 将执行一次带条件的前向过程和一次无条件的前向过程.)
-
-</td>
-</tr>
-</table>
 
 ## 3·Methodology: 方法
 
