--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -167,7 +167,7 @@ $$
 模型 $v_t$ 在整个流步骤和数据范围内进行训练, 确保它学习从初始分布到目标分布的整个变换过程.
 
 <--
-As we have no prior knowledge of how to approximate $p_t$ and $u_t$, a conditional probability path $p_t(x|x_1) = \mathcal{N}(x\ |\ \mu_t(x_1),\sigma_t(x_1)^2I)$ is considered in actual training, and the Conditional Flow Matching (CFM) loss is proved to have identical gradients w.r.t. $\theta$~\citep{cfm-ot}.
+As we have no prior knowledge of how to approximate $p_t$ and $u_t$, a conditional probability path $p_t(x|x_1) = \mathcal{N}(x\ |\ \mu_t(x_1),\sigma_t(x_1)^2I)$ is considered in actual training, and the Conditional Flow Matching (CFM) loss is proved to have identical gradients w.r.t.$\theta$~\citep{cfm-ot}.
 $x_1$ is the random variable corresponding to training data.
 $\mu$ and $\sigma$ is the time-dependent mean and scalar standard deviation of Gaussian distribution.
 -->
@@ -260,6 +260,7 @@ in CFM case, where $\alpha$ is the CFG strength.
 
 $$
 v_{t,CFG} = v_{t}(\psi_t(x_0),c) + \alpha (v_{t}(\psi_t(x_0),c)-v_{t}(\psi_t(x_0)))
+\tag{04}
 $$
 
 在 CFM 情况下, $\alpha$ 是 CFG 强度.
@@ -268,18 +269,13 @@ $$
 
 ## 3·Methodology: 方法
 
-<table>
-<tr>
-<td width="50%">
-
+<--
 This work aims to build a high-level text-to-speech synthesis system.
-We trained our model on the text-guided speech-infilling task ([A^3T [48]](../SpeechRepresentation/2022.03.18_A^3T.md); [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md)).
-Based on recent research ([DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md); [**E2 TTS** [36]](2024.06.26_E2_TTS.md); [E1 TTS [49]](2024.09.14_E1_TTS.md)), it is promising to train without phoneme-level duration predictor and can achieve higher naturalness in zero-shot generation deprecating explicit phoneme-level alignment.
-We adopt a similar pipeline as [**E2 TTS** [36]](2024.06.26_E2_TTS.md) and propose our advanced architecture ***F5-TTS***, addressing the slow convergence (timbre learned well at an early stage but struggled to learn alignment) and robustness issues (failures on hard case generation) of **E2 TTS**.
-We also propose a Sway Sampling strategy for flow steps at inference, which significantly improves our model's performance in faithfulness to reference text and speaker similarity.
-
-</td>
-<td>
+We trained our model on the text-guided speech-infilling task \citep{a3t,voicebox}.
+Based on recent research \citep{dittotts,e2tts,e1tts}, it is promising to train without phoneme-level duration predictor and can achieve higher naturalness in zero-shot generation deprecating explicit phoneme-level alignment.
+We propose our advanced architecture with faster convergence and more robust generation.
+We also propose an inference-time flow step sampling strategy, which significantly improves our model's performance in faithfulness to reference text and speaker similarity.
+-->
 
 本工作旨在构建一个高级的文本转语音合成系统.
 我们在文本引导的语音填充任务上训练我们的模型 ([A^3T [48]](../SpeechRepresentation/2022.03.18_A^3T.md); [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md)).
@@ -290,10 +286,6 @@ We also propose a Sway Sampling strategy for flow steps at inference, which sign
 
 我们还提出了一种在推理时用于流步骤的**摇摆采样 (Sway Sampling)**策略, 这显著提高了模型在真实文本和说话者相似性方面的性能.
 
-</td>
-</tr>
-</table>
-
 ### 3.1·Pipeline: 流水线
 
 <a id="sec:pipeline"></a>
@@ -302,27 +294,25 @@ We also propose a Sway Sampling strategy for flow steps at inference, which sign
 
 #### Training: 训练
 
-<table>
-<tr>
-<td width="50%">
-
+<--
 The infilling task is to predict a segment of speech given its surrounding audio and full text (for both surrounding transcription and the part to generate).
 For simplicity, we reuse the symbol $x$ to denote an audio sample and $y$ the corresponding transcript for a data pair $(x, y)$.
 As shown in Fig.01 (left), the acoustic input for training is an extracted mel spectrogram features $x_1\in \mathbb{R}^{F\times N}$ from the audio sample $x$, where $F$ is mel dimension and $N$ is the sequence length.
 In the scope of CFM, we pass in the model the noisy speech $(1-t)x_0+tx_1$ and the masked speech $(1-m)\odot x_1$, where $x_0$ denotes sampled Gaussian noise, $t$ is sampled flow step, and $m\in\{0,1\}^{F\times N}$ represents a binary temporal mask.
+-->
 
-Following **E2 TTS**, we directly use alphabets and symbols for English.
+<--
+Following E2 TTS, we directly use alphabets and symbols for English.
 We opt for full pinyin to facilitate Chinese zero-shot generation.
-By breaking the raw text into such character sequence and padding it with filler tokens to the same length as mel frames, we form an extended sequence $z$ with $c_i$ denoting the $i$-th character:
+By breaking the raw text into such character sequence and padding it with filler tokens $\langle F \rangle$ to the same length as mel frames, we form an extended sequence $z$ with $c_i$ denoting the $i$-th character:
 
 $$
 z = (c_1, c_2, \ldots, c_M, \underbrace{\langle F \rangle, \ldots, \langle F \rangle}_{(N-M)\text{ times}}).
+\tag{05}
 $$
 
 The model is trained to reconstruct $m\odot x_1$ with $(1-m)\odot x_1$ and $z$, which equals to learn the target distribution $p_1$ in form of $P(m\odot x_1|(1-m)\odot x_1,z)$ approximating real data distribution $q$.
-
-</td>
-<td>
+-->
 
 填充任务是给定某个语音片段的周围音频和完整文本 (包括周围的转录和需要生成的部分), 来预测该语音片段.
 为了简单起见, 我们使用符号 $x$ 表示音频样本, $y$ 表示对应的转录, 构成数据对 $(x, y)$.
@@ -330,7 +320,8 @@ The model is trained to reconstruct $m\odot x_1$ with $(1-m)\odot x_1$ and $z$, 
 
 在 CFM 的范围内, 我们将加噪语音 $(1-t)x_0+tx_1$ 和掩码语音 $(1-m)\odot x_1$ 作为模型的输入, 其中 $x_0$ 表示采样的高斯噪声, $t$ 表示采样的流步骤, $m\in\{0,1\}^{F\times N}$ 表示二进制时序掩码.
 
-遵循 **E2 TTS**, 对于英语, 我们直接使用英文字母和符号. 对于中文, 我们选择全拼以方便中文零样本生成.
+遵循 **E2 TTS**, 对于英语, 我们直接使用英文字母和符号.
+对于中文, 我们选择全拼以方便中文零样本生成.
 通过将原始文本分解为这样的字符序列, 并使用填充符号填充到与梅尔帧长度相同的长度, 我们得到扩展序列 $z$ 如下:
 
 $$
@@ -339,51 +330,43 @@ $$
 
 模型被训练以使用 $(1-m)\odot x_1$ 和 $z$ 来重构 $m\odot x_1$, 这等价于学习目标分布 $p_1$ 的形式 $P(m\odot x_1|(1-m)\odot x_1,z)$ 逼近真实数据分布 $q$.
 
-</td>
-</tr>
-</table>
-
 #### Inference: 推理
 
-<table>
-<tr>
-<td width="50%">
-
+<--
 To generate a speech with the desired content, we have the audio prompt's mel spectrogram features $x_{ref}$, its transcription $y_{ref}$, and a text prompt $y_{gen}$.
 Audio prompt serves to provide speaker characteristics and text prompt is to guide the content of generated speech.
+-->
 
+为了生成具有所需内容的语音, 我们拥有参考音频的梅尔频谱特征 $x_{ref}$, 对应的转录 $y_{ref}$, 以及文本提示 $y_{gen}$.
+参考音频用于提供说话人特点, 参考文本用于引导生成语音的内容.
+
+<--
 The sequence length $N$, or duration, has now become a pivotal factor that necessitates informing the model of the desired length for sample generation.
 One could train a separate model to predict and deliver the duration based on $x_{ref}$, $y_{ref}$ and $y_{gen}$.
 Here we simply estimate the duration based on the ratio of the number of characters in $y_{gen}$ and $y_{ref}$.
 We assume that the sum-up length of characters is no longer than mel length, thus padding with filler tokens is done as during training.
-
-To sample from the learned distribution, the converted mel features $x_{ref}$, along with concatenated and extended character sequence $z_{ref\cdot gen}$ serve as the condition in Eq.04.
-
-We have
-
-$$
-v_t(\psi_t(x_0),c) = v_t((1-t)x_0+tx_1|x_{ref}, z_{ref\cdot gen}),
-$$
-
-See from Fig.01 (right), we start from a sampled noise $x_0$, and what we want is the other end of flow $x_1$.
-Thus we use the ODE solver to gradually integrate from $\psi_0(x_0)=x_0$ to $\psi_1(x_0)=x_1$, given $d\psi_t(x_0)/dt=v_t(\psi_t(x_0),x_{ref}, z_{ref\cdot gen})$.
-
-During inference, the flow steps are provided in an ordered way, $e.g.$, uniformly sampled a certain number from 0 to 1 according to the NFE setting.
-
-After getting the generated mel with model $v_t$ and ODE solver, we discard the part of $x_{ref}$.
-Then we leverage a vocoder to convert the mel back to speech signal.
-
-</td>
-<td>
-
-为了生成具有所需内容的语音, 我们拥有参考音频的梅尔频谱特征 $x_{ref}$, 对应的转录 $y_{ref}$, 以及文本提示 $y_{gen}$.
-参考音频用于提供说话人特点, 参考文本用于引导生成语音的内容.
+-->
 
 序列长度 $N$ (或时长) 已经成为决定样本生成长度的关键因素, 因此需要告知模型期望的长度.
 可以训练一个单独的模型来基于 $x_{ref}$, $y_{ref}$ 和 $y_{gen}$ 预测和提供时长.
 
 这里, 我们简单地根据 $y_{gen}$ 和 $y_{ref}$ 的字符数量比例来估计时长.
 我们假设字符总长度不超过梅尔长度, 因此像训练时一样用填充符号填充.
+
+<--
+To sample from the learned distribution, the converted mel features $x_{ref}$, along with concatenated and extended character sequence $z_{ref\cdot gen}$ serve as the condition in Eq.04.
+We have
+$$
+v_t(\psi_t(x_0),c) = v_t((1-t)x_0+tx_1|x_{ref}, z_{ref\cdot gen}),
+\tag{06}
+$$
+
+See from Fig.01 (right), we start from a sampled noise $x_0$, and what we want is the other end of flow $x_1$.
+Thus we use the ODE solver to gradually integrate from $\psi_0(x_0)=x_0$ to $\psi_1(x_0)=x_1$, given $d\psi_t(x_0)/dt=v_t(\psi_t(x_0),x_{ref}, z_{ref\cdot gen})$.
+During inference, the flow steps are provided in an ordered way, $e.g.$, uniformly sampled a certain number from 0 to 1 according to the NFE setting.
+After getting the generated mel with model $v_t$ and ODE solver, we discard the part of $x_{ref}$.
+Then we leverage a vocoder to convert the mel back to waveform.
+-->
 
 为了从学习到的分布中采样, 转换后的梅尔特征 $x_{ref}$ 以及连接和扩展的字符序列 $z_{ref\cdot gen}$ 都作为 Eq.04 (CFG 公式) 中的条件.
 
@@ -399,10 +382,6 @@ $$
 通过模型 $v_t$ 和 ODE 求解器获得生成的梅尔频谱后, 我们丢弃 $x_{ref}$ 的部分.
 
 然后, 我们利用 Vocoder 将梅尔转换回语音信号.
-
-</td>
-</tr>
-</table>
 
 ### 3.2·F5-TTS
 
