--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -655,3 +655,9 @@ We will open-source our code, and models, to enhance transparency and facilitate
 我们公开了我们的代码和模型, 以增强透明度并促进可重复研究的领域.
 
 ## 参考文献
+
+[^Shen2018Tacotron2]: [**Tacotron2**: Natural TTS Synthesis by Conditioning Wavenet on Mel Spectrogram Predictions. ICASSP2018.](../Acoustic/2017.12.16_Tacotron2.md)
+[^Li2019TransformerTTS]: [**TransformerTTS**: Neural Speech Synthesis with Transformer Network. AAAI2019.](../Acoustic/2018.09.19_TransformerTTS.md)
+[^Ren2020FastSpeech2]: [**FastSpeech2**: Fast and High-Quality End-to-End Text-to-Speech. ArXiv:2006.04558.](../Acoustic/2020.06.08_FastSpeech2.md)
+[^Kim2020Glow-TTS]: [**Glow-TTS**: A Generative Flow for Text-to-Speech via Monotonic Alignment Search. NeurIPS2020.](../Acoustic/2020.05.22_Glow-TTS.md)
+[^Kim2021VITS]: [**VITS**: Conditional Variational Autoencoder with Adversarial Learning for End-To-End Text-to-Speech. ICML2021.](../E2E/2021.06.11_VITS.md)
